@startuml
skinparam classAttributeIconSize 0
title Hospital Management System - Class Diagram

enum Role {
  ADMIN
  DOCTOR
  RECEPTIONIST
}

abstract class User {
  - username: String
  - password: String
  - displayName: String
  - role: Role
  + matchesPassword(passwordAttempt: String): boolean
  + getRole(): Role
  + getHomeMessage(): String
}

class AdminUser
class DoctorUser
class ReceptionistUser

class Patient {
  - id: int
  - name: String
  - age: int
  - gender: String
  - medicalHistory: String
  + update(name: String, age: int, gender: String, medicalHistory: String): void
}

class Doctor {
  - id: int
  - name: String
  - specialization: String
  - status: String
  + update(name: String, specialization: String, status: String): void
}

class Appointment {
  - id: int
  - patient: Patient
  - doctor: Doctor
  - date: LocalDate
  - time: LocalTime
  + update(patient: Patient, doctor: Doctor, date: LocalDate, time: LocalTime): void
  + isSameDoctorSlot(doctorId: int, date: LocalDate, time: LocalTime): boolean
  + toScheduleLine(): String
}

class SystemController {
  + login(username: String, password: String): User
  + addPatient(name: String, age: int, gender: String, medicalHistory: String): Patient
  + updatePatient(patientId: int, name: String, age: int, gender: String, medicalHistory: String): void
  + deletePatient(patientId: int): void
  + addDoctor(name: String, specialization: String): Doctor
  + updateDoctor(doctorId: int, name: String, specialization: String, status: String): void
  + deleteDoctor(doctorId: int): void
  + bookAppointment(patientId: int, doctorId: int, date: LocalDate, time: LocalTime): Appointment
  + updateAppointment(appointmentId: int, patientId: int, doctorId: int, date: LocalDate, time: LocalTime): void
  + deleteAppointment(appointmentId: int): void
  + generateReport(): ReportSummary
}

class HospitalRepository {
  - users: List<User>
  - patients: List<Patient>
  - doctors: List<Doctor>
  - appointments: List<Appointment>
  + deletePatient(id: int): void
  + deleteDoctor(id: int): void
  + deleteAppointment(id: int): void
}

class AuthenticationService
class PatientService
class DoctorService
class AppointmentService
class ReportService
class ReportSummary

User <|-- AdminUser
User <|-- DoctorUser
User <|-- ReceptionistUser
User --> Role
Appointment *-- Patient
Appointment *-- Doctor
SystemController o-- AuthenticationService
SystemController o-- PatientService
SystemController o-- DoctorService
SystemController o-- AppointmentService
SystemController o-- ReportService
AuthenticationService --> HospitalRepository
PatientService --> HospitalRepository
DoctorService --> HospitalRepository
AppointmentService --> HospitalRepository
ReportService --> HospitalRepository
HospitalRepository o-- User
HospitalRepository o-- Patient
HospitalRepository o-- Doctor
HospitalRepository o-- Appointment
ReportService --> ReportSummary
@enduml
